--- a/screensaver.html
+++ b/screensaver.html
@@ -28,7 +28,7 @@ body, html {
 </head>
 <body>
 
-<img id="fullscreen-gif" src="boguebg.gif" alt="Classroom Screensaver GIF">
+<img id="fullscreen-gif" src="supsupsmol.gif" alt="Classroom Screensaver GIF">
 
 <script>
 // Optional: Add a simple script to hide the mouse cursor after a short delay
